--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Show of</title>
+
+	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/style.css">
+
+	<!-- External -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	<!-- Scripts -->
+	<script src="/app.js" defer></script>
 </head>
 <body>
-	
-	<script src="/app.js" defer></script>
+	<header>
+		<form class="searchForm">
+			<label>
+				Søg på et kort her:
+				<input type="search" name="search">
+			</label>
+			<button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+		</form>
+	</header>
+	<main>
+		<section class="searchResult"></section>
+	</main>
 </body>
 </html>
