--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		</form>
 	</header>
 	<main>
-		<section class="searchResult"></section>
+		<section class="carosel">
+			<h2>Resultater</h2>
+			<div class="searchResult carosel__rotates"></div>
+		</section>
 	</main>
 </body>
 </html>
